# tauri-plugin-log

./: .eslintignore  .eslintrc.json  CHANGELOG.md  Cargo.toml  README.md  package.json  pnpm-lock.yaml  rollup.config.js  tsconfig.json  tsup.config.ts
.changes/: add-target-app-dir.md  config.json  feat-default-config.md  feat-format-cb.md  filtering-options.md  fix-use-app-name.md  include-types.md  initial-release.md  readme.md  remove-json-config.md  remove-new-params.md  use-app-name.md  with-colors-regular-method.md
.github/workflows/: audit-javascript.yml  covector-version-or-publish.yml  format-rust.yml  lint-rust.yml  lint.yml  test-rust.yml  test.yml
dist-js/: index.cjs  index.d.ts  index.js  index.min.js  index.min.js.map  index.mjs  index.mjs.map
examples/cra/: package.json
examples/cra/src/: App.tsx  index.tsx
examples/cra/src-tauri/: Cargo.toml  tauri.conf.json
examples/cra/src-tauri/src/: main.rs
examples/svelte-app/: package.json
examples/svelte-app/src/: App.svelte
examples/svelte-app/src-tauri/: Cargo.toml  tauri.conf.json
examples/svelte-app/src-tauri/src/: main.rs
src/: lib.rs
webview-dist/: index.d.ts  index.js  index.min.js  index.mjs
webview-src/: index.ts  rollup.config.js  tsconfig.json
