[package]
name = "tauri-plugin-log"
version = "0.1.0"
authors = [ "Tauri Programme within The Commons Conservancy" ]
edition = "2018"

[dependencies]
tauri = { git = "https://github.com/tauri-apps/tauri", branch = "next" }
serde = "1.0"
serde_json = "1.0"
serde_repr = "0.1"
byte-unit = "4.0"
fern = "0.6"
log = "0.4"
chrono = "0.4"
