[package]
name = "tauri-plugin-log"
version = "1.0.0"
authors = [ "Tauri Programme within The Commons Conservancy" ]
license = "Apache-2.0 OR MIT"
edition = "2021"

[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_repr = "0.1"
byte-unit = "4.0"
fern = "0.6"
log = "0.4"
chrono = "0.4"
tauri = "1.0"

[features]
colored = [ "fern/colored" ]
