[package]
name = "tauri-plugin-log"
version = "0.1.0"
authors = [ "Tauri Programme within The Commons Conservancy" ]
license = "Apache-2.0 OR MIT"
edition = "2021"

[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_repr = "0.1"
byte-unit = "4.0"
fern = "0.6"
log = { version = "0.4", features = ["kv_unstable"] }
time = { version = "0.3", features = ["formatting"] }
tauri = "1"

[features]
colored = ["fern/colored"]
